force-app/main/default/objects/FeedbackArchive__c/FeedbackArchive__c.object-meta.xml
<CustomObject>
    <description>Archive storage for interview feedback records that have exceeded retention policy</description>
    <label>Feedback Archive</label>
    <nameField>
        <displayFormat>FA-{00000000}</displayFormat>
        <label>Archive Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Archives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>