force-app/main/default/objects/FeedbackArchive__c/fields/Archive_Data__c.field-meta.xml
<CustomField>
    <fullName>Archive_Data__c</fullName>
    <description>JSON serialized data of the original feedback record</description>
    <inlineHelpText>Complete data from the original record stored as JSON</inlineHelpText>
    <label>Archive Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>