force-app/main/default/objects/FeedbackArchive__c/fields/Archived_Date__c.field-meta.xml
<CustomField>
    <fullName>Archived_Date__c</fullName>
    <description>Date and time when the record was archived</description>
    <inlineHelpText>When this record was moved to the archive</inlineHelpText>
    <label>Archived Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>