force-app/main/default/objects/FeedbackArchive__c/fields/Original_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Record_Id__c</fullName>
    <description>ID of the original feedback record that was archived</description>
    <externalId>true</externalId>
    <inlineHelpText>The Salesforce ID of the original feedback record before archival</inlineHelpText>
    <label>Original Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>