force-app/main/default/objects/FeedbackArchive__c/fields/Retention_Reason__c.field-meta.xml
<CustomField>
    <fullName>Retention_Reason__c</fullName>
    <description>Reason why the record was archived</description>
    <inlineHelpText>The business or legal reason for archiving this record</inlineHelpText>
    <label>Retention Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>